--- a/assignment/index.html
+++ b/assignment/index.html
@@ -2,11 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
     <title>Week 5 Assignment</title>
   </head>
   <body>
-    <h1>Week 5 Assignment - Part 2</h1>
-    <p>See console for output.</p>
+    <header>
+      <h1>Week 5 Assignment - Part 2</h1>
+      <h2>Zach Cater's Record Shop</h2>
+    </header>
+    <main>
+      <p>See console for output.</p>
+    </main>
+
     <!-- Create an unordered list with any questions you have -->
   </body>
 </html>
