--- a/assignment/index.html
+++ b/assignment/index.html
@@ -5,12 +5,13 @@
     <link rel="stylesheet" href="style.css">
     <title>Week 5 Assignment</title>
   </head>
+  
   <body>
-    <header>
+    <header class=title>
       <h1>Week 5 Assignment - Part 2</h1>
       <h2>Zach Cater's Record Shop</h2>
     </header>
-    <main>
+    <main class=info>
       <p>See console for output.</p>
     </main>
 
